# one-cli

./: .gitignore  Makefile  README.md  go.mod  go.sum
cmd/opencli/: main.go
examples/: petstore.yaml
internal/app/: generate_command.go  init_command.go  inspect_command.go  root.go
internal/cli/: execute.go  exitcode.go  flags.go  root.go
internal/config/: env.go  load.go
internal/configgen/: config.go  load.go
internal/httpx/: client.go  headers.go  response.go  trace.go
internal/loaders/: file.go  http.go  source.go
internal/mcp/: config.go  convert.go  discover.go  transport.go  transport_stdio.go  transport_streamable_http.go
internal/model/: app.go
internal/openapi/: document.go  normalize.go  parser.go
internal/output/: json.go  pretty.go  table.go
internal/planner/: bodymode.go  naming.go  plan.go
internal/render/: embed.go  files.go  go_project.go  gomod.tmpl  gosum.tmpl  project.go  render.go  rust_helpers.go  rust_project.go
internal/templates/: group_command.go.tmpl  group_service.go.tmpl  group_types.go.tmpl  readme.md.tmpl  root_main.go.tmpl  skill.md.tmpl
scripts/: SMOKE_TEST.md  smoke.sh
skills-verify/: .env.example  README.md  cli_backend.py  clibackend.py  main.py  pyproject.toml
skills-verify/tests/: test_mcp.py
tests/command/: helpers_test.go  opencli_generate_test.go  opencli_inspect_test.go  opencli_root_test.go  readme_smoke_test.go  root_command_test.go  skill_command_test.go
tests/integration/: examples_generate_test.go  generate_smoke_test.go  header_parameter_cli_test.go  helpers_test.go  leave_check_test.go  (+6 more)
(+49 files in other folders)
