[project]
name = "skills-verify"
version = "0.1.0"
description = "Verification harness for generated opencli skills"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents",
    "langchain-core",
    "langchain-mcp-adapters",
    "langchain-openai",
    "python-dotenv",
    "pytest",
]

[tool.uv]
package = false
